making my first

--- a/Sets (batch 5 pm).ipynb
+++ b/Sets (batch 5 pm).ipynb
@@ -74,16 +74,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Only Hindi Newspaper readers :  palak shaid Keshav pooja\n",
-      "Only English Newspaper readers :  kriti apurva ashish\n",
-      "Total readers are :  palak pooja Keshav kriti keshav vaibhav devash ashish apurva jayati shaid\n",
+      "Only Hindi Newspaper readers :  shaid pooja Keshav palak\n",
+      "Only English Newspaper readers :  ashish apurva kriti\n",
+      "Total readers are :  ashish shaid apurva Keshav kriti devash vaibhav jayati keshav palak pooja\n",
       "Total are :  11\n"
      ]
     }
@@ -169,20 +169,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0b1111011\n"
+      "0b1111011\n",
+      "['__add__', '__class__', '__contains__', '__delattr__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__getitem__', '__getnewargs__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__iter__', '__le__', '__len__', '__lt__', '__mod__', '__mul__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__rmod__', '__rmul__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', 'capitalize', 'casefold', 'center', 'count', 'encode', 'endswith', 'expandtabs', 'find', 'format', 'format_map', 'index', 'isalnum', 'isalpha', 'isdecimal', 'isdigit', 'isidentifier', 'islower', 'isnumeric', 'isprintable', 'isspace', 'istitle', 'isupper', 'join', 'ljust', 'lower', 'lstrip', 'maketrans', 'partition', 'replace', 'rfind', 'rindex', 'rjust', 'rpartition', 'rsplit', 'rstrip', 'split', 'splitlines', 'startswith', 'strip', 'swapcase', 'title', 'translate', 'upper', 'zfill']\n"
      ]
     }
    ],
    "source": [
     "x = bin(123)\n",
-    "print(x)"
+    "print(x)\n",
+    "print(dir(x))"
    ]
   },
   {
@@ -298,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -376,12 +378,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['h', 'n', 'o', 'p', 't', 'y']\n",
+      "h n o p t y\n"
+     ]
+    }
+   ],
+   "source": [
+    "#eg. list (seq)\n",
+    "\n",
+    "x = list('python')\n",
+    "x.sort()# it is used to sort the alphabets is ascending order\n",
+    "print(x)# use '*' before x in print to remove brackets and quotes (used below for example)\n",
+    "print(*x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'k', 'h', 'r', 'i', 's', 'e'}\n",
+      "k h r i s e\n",
+      "e h i k r s\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = set('rishikesh')\n",
+    "print(x)\n",
+    "print(*x)#same answer but without brackets and quotes\n",
+    "y = list(x)# 'x' is listed in 'y' for sorting the elements in proper order \n",
+    "y.sort()\n",
+    "print(*y)#same answer but sorted in ascending order"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "0"
+    "#set is used to remove redundant elements for a list to avoid "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
